[package]
name = "arithmetic_boy"
version = "0.1.0"
authors = ["Tianlang <tianlangstudio@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = {path="/data/code/github/rust/bevy"}
bevy = "0.5"
rand = "0.8"
